--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-output/
-hostfiles/
-internal_scripts/
+# Typical exclusions
+*.pth
+*.pt
+*.npy
+*.npz
+*.log
+*.txt
+outputs/
+checkpoints/
+__pycache__/
+*.ipynb_checkpoints/
